# SafeStream

./: .gitignore  .pre-commit-config.yaml  ADMIN_ACTIONS_SUMMARY.md  DASHBOARD_AUTH_FIX.md  Dockerfile  README.md  alembic.ini  cli_test_auth.py  commit_message_docs_update.txt  commit_message_frontend_restructure.txt  delete_user.py  docker-compose.yml  list_users.py  pyproject.toml  test_session_reset.py  test_simple_session.py  test_websocket.py  users.json  view_users_guide.md
.github/workflows/: ci.yml
.venv312/: pyvenv.cfg
DevelopmentVerification/: ADMIN_ACTIONS_SUMMARY.md  AdminActions_Implementation.md  SessionPersistenceTest.md  Step1.bash  Step1.md  Step10.bash  Step10.md  Step11.bash  Step11.md  Step12.bash  Step12.md  Step12_Summary.md  Step13.md  Step2.bash  Step2.md  Step3.bash  Step3.md  Step4.bash  Step4.md  Step5.bash  Step5.md  Step6.bash  Step6.md  Step7.bash  Step7.md  Step8.bash  Step8.md  Step9.bash  Step9.md  TwoPageArchitectureTest.md  all_verifications.sh  verify_admin_actions.py
DevelopmentVerification/Step7Extra/: setup_python312.sh
alembic/: env.py
alembic/versions/: 2ced2aeb79df_add_settings_table_for_toxicity_.py  72b295dfaf1b_add_usersession_model_for_session_.py  a0b361340092_create_initial_tables.py  c346b388f004_initial_migration_no_tables_yet.py  db7517b5a359_add_is_streamer_flag_to_users.py
app/: __init__.py  auth.py  config.py  db.py  events.py  main.py  metrics.py  moderation.py  schemas.py
app/db/: __init__.py  models.py
app/services/: __init__.py  database.py
dashboard/: app.py  styles.css
docs/: DEV_SETUP.md  QUICK_START.md  Step7.md
frontend/: index.html  styles.css
load/: locustfile.py
scripts/: Step7.bash  create_admin_user.py  list_users.py  test-ci.sh  test_session_persistence.sh  test_two_page_architecture.sh
static/: app.html  index.html  login.html  stream_viewer.html
static/css/: login.css  styles.css
static/js/: app.js  login.js  main.js
tests/: __init__.py  conftest.py  db_fixtures.py  test_admin_actions.py  test_auth.py  test_dashboard_route.py  test_events.py  test_frontend_basic.py  test_gift.py  test_login_flow.py  test_metrics.py  test_moderation.py  test_random_gift.py  test_schemas.py  test_smoke.py  test_toxic_gate.py  test_ui_playwright.py  test_ws_basic.py
